--- a/CardGame/CardGame.csproj
+++ b/CardGame/CardGame.csproj
@@ -36,7 +36,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Cards.cs" />
     <Compile Include="Player.cs" />
-    <Compile Include="Round.cs" />
+    <Compile Include="CharlemagneRound.cs" />
+    <Compile Include="SimpleSpadesRound.cs" />
+    <Compile Include="CardGameRound.cs" />
+    <Compile Include="Trick.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
