Basic working game with rules based AI

--- a/CardGame/CardGame.csproj
+++ b/CardGame/CardGame.csproj
@@ -30,6 +30,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="nunit.framework" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -40,6 +41,7 @@
     <Compile Include="SimpleSpadesRound.cs" />
     <Compile Include="CardGameRound.cs" />
     <Compile Include="Trick.cs" />
+    <Compile Include="Tests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
